--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
     "install": "concurrently \"cd client && npm install\" \"cd server && npm install\" ",
-    "client": "cd client && npm start"
+    "client": "cd client && npm start",
+    "heroku-prebuild": "npm install --dev"
+  },
+  "engines": {
+    "node": "v16.17.0"
   },
   "keywords": [],
   "author": "",
